manifests/configs/eck/elastic-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: elastic
  namespace: eck
  labels:
    app: kubed
    ingressClass: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`elastic.n6.bonkie.net`)
      kind: Rule
      services:
      - name: quick-es-http
        port: 9200
  tls:
    certResolver: letsencrypt
