manifests/configs/eck/kibana-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: eck
  labels:
    app: kubed
    ingressClass: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`kibana.n6.bonkie.net`)
    kind: Rule
    services:
    - name: quick-kb-http
      port: 5601
  tls:
    certResolver: letsencrypt
